--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model CRUDWithModalPopup.Models.DBEntities.Product
+﻿@model CRUDWithModalPopup.Models.DBEntities.Product;
 
 
 @{
@@ -21,6 +21,7 @@
                 <th>Product Name</th>
                 <th>Price</th>
                 <th>Qty</th>
+                <th>Kategori Name</th>
                 <th>Action</th>
                 </tr>
             </thead>
@@ -47,7 +48,11 @@
                     <div class="mb-2">
                         <label asp-for="Qty"></label>
                         <input type="number" asp-for="Qty" class="form-control" placeholder="Qty" />
-                    </div>            
+                    </div>
+                    <div class="mb-2">
+                        <label for="kategoriName" class="form-label">Kategori Name</label>
+                        <input type="text" class="form-control" id="kategoriName" name="KategoriName" required>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-primary" id="Save" type="submit" onclick="Insert();">Save</button>
